--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,15 +1,22 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<Shell
-    x:Class="WorkersApp.AppShell"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:WorkersApp"
-    Shell.FlyoutBehavior="Disabled"
-    Title="WorkersApp">
+<?xml version="1.0" encoding="UTF-8"?>
+<Shell xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       x:Class="WorkersApp.AppShell"
+       xmlns:local="clr-namespace:WorkersApp"
+       Shell.FlyoutBehavior="Disabled"
+       Title="WorkersApp">
 
-    <ShellContent
-        Title="Workers Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <Shell.Resources>
+        <Style x:Key="MyShellStyle" TargetType="Element">
+            <Setter Property="Shell.BackgroundColor" Value="#FFDAB9" />
+            <Setter Property="Shell.TitleColor" Value="Black"/>
+        </Style>
+    </Shell.Resources>
+
+    <Shell.Style>
+        <Style TargetType="Shell" BasedOn="{StaticResource MyShellStyle}" />
+    </Shell.Style>
+
+    <ShellContent Title="Subir Archivos" ContentTemplate="{DataTemplate local:MainPage}" Route="MainPage" />
 
 </Shell>
