--- a/SplashPage.xaml
+++ b/SplashPage.xaml
@@ -5,6 +5,6 @@
              BackgroundColor="#FFDAB9">
 
     <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
-        <Label Text="Bienvenido a esta Aplicacion para Subir Archivos" TextColor="black" FontSize="24" HorizontalOptions="Center" />
+        <Label Text="Bienvenido" TextColor="black" FontAttributes="Bold" FontFamily="Lobster" FontSize="56" HorizontalOptions="Center" />
     </StackLayout>
 </ContentPage>
