Change to Stream metod to share files

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -6,20 +6,26 @@
 
     <StackLayout Padding="10" VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
         <Grid>
-            <Entry x:Name="CompanyNumberEntry" Placeholder="Numero de la Empresa" MaxLength="{Binding Path=PasswordLength}" TextChanged="OnCompanyNumberEntryTextChanged" TextColor="black" />
+            <Entry x:Name="CompanyNumberEntry" Placeholder="Número de la Empresa" MaxLength="6" TextChanged="OnCompanyNumberEntryTextChanged" TextColor="black" />
             <BoxView Color="Black" HeightRequest="1" HorizontalOptions="FillAndExpand" VerticalOptions="End" />
+        </Grid>
+        <Label x:Name="ErrorMessageLabel" TextColor="Red" IsVisible="False" />
+        <Grid Margin="0,10,10,0" BackgroundColor="Black">
+            <Grid Margin="1" BackgroundColor="#FFEFD5">
+                <Label x:Name="SelectedFilePathLabel" Text="Archivo no seleccionado" VerticalOptions="Center" TextColor="Black" Margin="10" IsVisible="False"/>
+            </Grid>
         </Grid>
         <Button x:Name="SelectFileButton" Text="Seleccionar Archivo" Clicked="OnSelectFileButtonClicked" BackgroundColor="#FFA500" TextColor="black" WidthRequest="200" Margin="0,10,0,0" IsVisible="False"/>
         <Label x:Name="FileSizeLabel" Text="Tamaño del archivo: 0 MB" TextColor="black" IsVisible="False"/>
-        <Button x:Name="DeleteFileButton" Text="Eliminar Archivo" Clicked="OnDeleteFileButtonClicked" BackgroundColor="Red" TextColor="black" WidthRequest="200" Margin="0,10,0,0" IsVisible="False"/>
-        <ProgressBar x:Name="UploadProgressBar" WidthRequest="300" HeightRequest="20" IsVisible="False" Margin="0,10,0,0" BackgroundColor="Gray" ProgressColor="Orange" />
+        <Button x:Name="UploadFileButton" Text="Subir Archivo" Clicked="OnUploadButtonClicked" BackgroundColor="#FFA500" TextColor="black" WidthRequest="200" Margin="0,10,0,0" IsVisible="False"/>
+        <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center" IsVisible="False" x:Name="ProgressStack">
+            <ProgressBar x:Name="UploadProgressBar" WidthRequest="300" HeightRequest="20" BackgroundColor="Gray" ProgressColor="Orange" />
+            <Label x:Name="ProgressPercentageLabel" Text="0%" TextColor="black" VerticalOptions="Center" Margin="10,0,0,0"/>
+        </StackLayout>
         <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="10" IsVisible="False" x:Name="UploadFileLayout">
-            <Grid Margin="0,10,10,0" Background="Black">
-                <Grid Margin="1" Background="#FFEFD5">
-                    <Label x:Name="SelectedFilePathLabel" Text="Archivo no seleccionado" VerticalOptions="Center" TextColor="Black" Margin="10"/>
-                </Grid>
-            </Grid>
-            <Button x:Name="UploadFileButton" Text="Subir Archivo" Clicked="OnUploadButtonClicked" BackgroundColor="#FFA500" TextColor="black" WidthRequest="200" Margin="0,10,0,0" IsVisible="False"/>
+            <Button x:Name="PauseUploadButton" Text="Pausar" BackgroundColor="Yellow" TextColor="black" WidthRequest="100" Margin="0,10,0,0" IsVisible="False"/>
+            <Button x:Name="CancelUploadButton" Text="Cancelar" BackgroundColor="Red" TextColor="black" WidthRequest="100" Margin="0,10,0,0" IsVisible="False"/>
+            <Button x:Name="DeleteFileButton" Text="Eliminar Archivo" Clicked="OnDeleteFileButtonClicked" BackgroundColor="Red" TextColor="black" WidthRequest="100" Margin="0,10,0,0" IsVisible="False"/>
         </StackLayout>
     </StackLayout>
 </ContentPage>
