--- a/Pages/ConfigPage.xaml
+++ b/Pages/ConfigPage.xaml
@@ -5,9 +5,14 @@
              BackgroundColor="#FFDAB9">
 
     <StackLayout Padding="10" VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
-        <Label Text="Configuración del Servidor" TextColor="black" FontAttributes="Bold" FontSize="24" HorizontalOptions="Center" />
-        <Entry x:Name="ServerIpEntry" Placeholder="Dirección IP del Servidor" Keyboard="Text" />
-        <Entry x:Name="ServerPortEntry" Placeholder="Puerto del Servidor" Keyboard="Numeric" />
-        <Button Text="Guardar Configuración" Clicked="OnSaveConfigButtonClicked" BackgroundColor="#FFA500" TextColor="black" WidthRequest="200" Margin="0,10,0,0" />
+        <Label Text="Configuración del Servidor" TextColor="Black" FontAttributes="Bold" FontSize="32" HorizontalOptions="Center" Margin="0,0,0,20" />
+        <Label Text="Esta pantalla solo aparecera la primera vez que inicies la aplicacion!" TextColor="black" FontSize="16" HorizontalOptions="Center" Margin="0,0,0,10"/>
+
+
+        <Entry x:Name="ServerIpEntry" Placeholder="Dirección IP del Servidor" Keyboard="Text" TextColor="Black" BackgroundColor="White" Margin="0,0,0,2" />
+        <Entry x:Name="ServerPortEntry" Placeholder="Puerto del Servidor" Keyboard="Numeric" TextColor="Black" BackgroundColor="White" />
+
+
+        <Button Text="Guardar Configuración" Clicked="OnSaveConfigButtonClicked" BackgroundColor="#FFA500" TextColor="Black" WidthRequest="200" Margin="0,10,0,0" />
     </StackLayout>
 </ContentPage>
