--- a/Pages/ConfigPage.xaml
+++ b/Pages/ConfigPage.xaml
@@ -3,16 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WorkersApp.Pages.ConfigPage"
              BackgroundColor="#FFDAB9">
-
     <StackLayout Padding="10" VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
         <Label Text="Configuración del Servidor" TextColor="Black" FontAttributes="Bold" FontSize="32" HorizontalOptions="Center" Margin="0,0,0,20" />
-        <Label Text="Esta pantalla solo aparecera la primera vez que inicies la aplicacion!" TextColor="black" FontSize="16" HorizontalOptions="Center" Margin="0,0,0,10"/>
-
-
+        <Label Text="Esta pantalla solo aparecerá la primera vez que inicies la aplicación!" TextColor="black" FontSize="16" HorizontalOptions="Center" Margin="0,0,0,10"/>
         <Entry x:Name="ServerIpEntry" Placeholder="Dirección IP del Servidor" Keyboard="Text" TextColor="Black" BackgroundColor="White" Margin="0,0,0,2" />
         <Entry x:Name="ServerPortEntry" Placeholder="Puerto del Servidor" Keyboard="Numeric" TextColor="Black" BackgroundColor="White" />
-
-
         <Button Text="Guardar Configuración" Clicked="OnSaveConfigButtonClicked" BackgroundColor="#FFA500" TextColor="Black" WidthRequest="200" Margin="0,10,0,0" />
     </StackLayout>
 </ContentPage>
