--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -1,14 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="WorkersApp.MainPage"
+             x:Class="WorkersApp.Pages.MainPage"
              BackgroundColor="#FFEFD5">
-
     <StackLayout Padding="10" VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
-        <Grid>
-            <Entry x:Name="CompanyNameEntry" Placeholder="Nombre de la Empresa" TextChanged="OnCompanyNameEntryTextChanged" TextColor="black" FontSize="20"/>
-            <BoxView Color="#FF4500" HeightRequest="1" HorizontalOptions="FillAndExpand" VerticalOptions="End" />
-        </Grid>
+        <Entry x:Name="CompanyNameEntry" Placeholder="Nombre de la Empresa" TextChanged="OnCompanyNameEntryTextChanged" TextColor="black" FontSize="20"/>
         <Label x:Name="ErrorMessageLabel" TextColor="Red" IsVisible="False" />
         <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center" IsVisible="False" x:Name="FileInfoStack" Margin="0,10,0,5">
             <Grid Margin="0,10,5,0" BackgroundColor="Black">
@@ -22,7 +17,7 @@
                 </Grid>
             </Grid>
         </StackLayout>
-        <Button x:Name="SelectFileButton" Text="Seleccionar Archivo" Clicked="OnSelectFileButtonClicked" BackgroundColor="#FFA500" TextColor="black" WidthRequest="200" Margin="0,10,0,0" IsVisible="False"/>
+        <Button x:Name="SelectFileButton" Text="Seleccionar Archivo" Clicked="OnSelectFileButtonClicked" BackgroundColor="#FFA500" TextColor="black" WidthRequest="200" Margin="0,10,0,0"/>
         <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="10" IsVisible="False" x:Name="ActionButtonsStack">
             <Button x:Name="UploadFileButton" Text="Subir Archivo" Clicked="OnUploadButtonClicked" BackgroundColor="#FFA500" TextColor="black" WidthRequest="200" Margin="0,10,0,0"/>
             <Button x:Name="DeleteFileButton" Text="Eliminar Archivo" Clicked="OnDeleteFileButtonClicked" BackgroundColor="#FF4500" TextColor="black" WidthRequest="200" Margin="0,10,0,0"/>
