--- a/Pages/ConfigPage.xaml
+++ b/Pages/ConfigPage.xaml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8" ?>
+<!-- Declaración del archivo XAML y la codificación -->
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WorkersApp.Pages.ConfigPage"
              BackgroundColor="#FFDAB9">
+    <!-- Página de contenido con un fondo de color -->
     <StackLayout Padding="10" VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
+        <!-- Contenedor de diseño apilado con relleno y opciones de alineación -->
         <Label Text="Configuración del Servidor" TextColor="Black" FontAttributes="Bold" FontSize="32" HorizontalOptions="Center" Margin="0,0,0,20" />
+        <!-- Etiqueta para el título de la configuración del servidor -->
         <Label Text="Esta pantalla solo aparecerá la primera vez que inicies la aplicación!" TextColor="black" FontSize="16" HorizontalOptions="Center" Margin="0,0,0,10"/>
+        <!-- Etiqueta informativa -->
         <Entry x:Name="ServerIpEntry" Placeholder="Dirección IP del Servidor" Keyboard="Text" TextColor="Black" BackgroundColor="White" Margin="0,0,0,2" />
+        <!-- Campo de entrada para la dirección IP del servidor -->
         <Entry x:Name="ServerPortEntry" Placeholder="Puerto del Servidor" Keyboard="Numeric" TextColor="Black" BackgroundColor="White" />
+        <!-- Campo de entrada para el puerto del servidor -->
         <Button Text="Guardar Configuración" Clicked="OnSaveConfigButtonClicked" BackgroundColor="#FFA500" TextColor="Black" WidthRequest="200" Margin="0,10,0,0" />
+        <!-- Botón para guardar la configuración, con un evento de clic manejado en el code-behind -->
     </StackLayout>
 </ContentPage>
